--- a/web-app/css/default1.css
+++ b/web-app/css/default1.css
@@ -53,14 +53,6 @@
 	float: right;
 	border-left: 1px solid #225496;}
 
-input {
-	text-align: left;
-	vertical-align: middle;
-	color: #000;
-	background: #fff;
-	border: 1px solid #7f9db9;
-}
-
 .nav input {
 	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
 	font-size: 95%;
@@ -95,13 +87,13 @@ ul li {
 	line-height: 130%;
 	list-style-type: none;
 	margin-bottom: 6px;}*/
-		
+/*
 ol {
 	margin-top: 10px;}
 
 ol.decimal li {
 	list-style-type: decimal;
-}
+} */
 	
 ul.square li {
 	list-style-type: square;
@@ -263,7 +255,7 @@ pre {
  	font-size: 90%;
 	line-height: 130%;
  	margin: 20px 0px 20px 0px;}
-
+   /*
 table {
 	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
 	font-size: 100%;
@@ -271,7 +263,7 @@ table {
 
 td {
 	vertical-align: top;}
-
+     */
 .fullwidth {
 	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
 	padding: 0px 0px 0px 16px;
