--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -33,6 +33,13 @@ h2 {
     margin: 0;
 }
 
+h3 {
+	color: #225496;
+	font-weight: normal;
+	font-size: 12pt;
+    margin-bottom: 12px;
+}
+
 p {
 	margin-top: 6px;
 }
@@ -192,9 +199,9 @@ fieldset div, fieldset li, ol li {
     margin-top: 5px;
 }
 
-fieldset div:first-child, fieldset li:first-child, ol li:first-child {
+/*fieldset div:first-child, fieldset li:first-child, ol li:first-child {
     margin-top: 0;
-}
+}  */
 
 input, textarea, select {
 	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
@@ -229,9 +236,12 @@ label, .property-label {
 	display: inline-block;
 	width: 25%;
 	margin-right: 10px;
-    margin-top: 2px;
 	text-align: right;
     color: #666666;
+}
+
+label {
+    margin-top: 2px;
 }
 
 li label {
@@ -284,6 +294,16 @@ fieldset span.ui-icon {
 
 fieldset .add {
     font-weight: bold;
+}
+
+fieldset .column {
+    float: left;
+    width: 200px;
+}
+
+fieldset .columns label {
+    text-align: left;
+    width: 100%;
 }
 
 /* MESSAGES AND ERRORS */
@@ -376,10 +396,22 @@ tbody tr:hover {
 	clear: both;
 }
 
+.empty {
+    display: inline;
+    padding: 0;
+    margin: 0;
+    width: 0;
+    height: 0;
+}
+
 .inline {
     display: inline-block;
 }
 
 .hidden {
     display: none;
+}
+
+.bold {
+    font-weight: bold;
 }
