--- a/web-app/css/default1.css
+++ b/web-app/css/default1.css
@@ -191,12 +191,12 @@ h2.inline {
 	float: left;
 	margin: 0px 0px 0px 0px;}
 
-h3 {
+/*h3 {
 	font-size: 170%;
 	line-height: 100%;
 	font-weight: normal;
 	margin-bottom: 0px;
-	clear: left;}
+	clear: left;}      */
 
 h4 {
 	font-size: 130%;
@@ -284,9 +284,9 @@ td {
 	padding:0px 0px 0px 10px; 
 	border-left: 1px solid #c42737;}
 
-.column {
+/*.column {
 	padding-bottom: 16px;
-	clear: left;}
+	clear: left;}*/
 
 img.left {
 	float: left;
