--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -203,13 +203,9 @@ fieldset div, fieldset li, ol li {
     margin-top: 5px;
 }
 
-/*fieldset div:first-child, fieldset li:first-child, ol li:first-child {
-    margin-top: 0;
-}  */
-
 input, textarea, select {
-	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
-	font-size: 9pt;
+    font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-size: 9pt;
     background: #FFFFFF;
     border: 1px solid #7F9DB9;
 }
@@ -237,10 +233,10 @@ select {
 }
 
 label, .property-label {
-	display: inline-block;
-	width: 25%;
-	margin-right: 10px;
-	text-align: right;
+    display: inline-block;
+    width: 25%;
+    margin-right: 10px;
+    text-align: right;
     color: #666666;
 }
 
@@ -282,8 +278,6 @@ li label {
     text-decoration: none;
     border: none;
     outline: none;
-    vertical-align: middle;
-    background-color: #FFFFFF;
 }
 
 .buttons input:hover, .buttons input:focus, .buttons a:hover, .buttons a:focus {
@@ -310,29 +304,38 @@ fieldset .columns label {
     width: 100%;
 }
 
+fieldset .columns.copy .column {
+    line-height: 1.5;
+    margin-right: 15px;
+    padding: 10px;
+}
+
 /* MESSAGES AND ERRORS */
 
-.message {
-    background: url("../images/skin/information.png") no-repeat scroll 7px 50% transparent;
-    color: #225496;
-    margin: 30px 30px 20px;
+.message, .errors li {    
     padding: 5px;
     text-indent: 25px;
+}
+
+.message {
+    margin: 30px 30px 20px;  
+    background: url("../images/skin/information.png") no-repeat scroll 7px 50% transparent; 
+    color: #225496;
        -moz-box-shadow: 0 0 3px 1px #225496;
     -webkit-box-shadow: 0 0 3px 1px #225496;
             box-shadow: 0 0 3px 1px #225496;
 }
 
 .errors {
+    margin: 30px 30px 20px;  
     color: #cc0000;
-       -moz-box-shadow: 0 0 0.25em #ff8888;
-    -webkit-box-shadow: 0 0 0.25em #ff8888;
-            box-shadow: 0 0 0.25em #ff8888;
+       -moz-box-shadow: 0 0 3px 1px #ff8888;
+    -webkit-box-shadow: 0 0 3px 1px #ff8888;
+            box-shadow: 0 0 3px 1px #ff8888;
 }
 
 .errors li {
-    background: transparent url(../images/skin/exclamation.png) 0.5em 50% no-repeat;
-    text-indent: 2.2em;
+    background: url(../images/skin/exclamation.png) no-repeat scroll 7px 50% transparent; 
 }
 
 .error input, .error select, .error textarea {
@@ -343,23 +346,37 @@ fieldset .columns label {
 
 /* TABLES */
 
+.tbl_toolbar {
+    background-color: #D8E2EB;
+    border-top: 1px solid #7F9DB9;
+    color: #225496;
+    font-weight: bold;
+    padding: 5px 10px;
+}
+
+.tbl_toolbar span {
+    margin: 0 15px;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
-    border: 1px solid #7F9DB9;
 }
 
 thead {
-    border: 1px solid #7F9DB9;
-    background-color: #7F9DB9;
+    border-top: 1px solid #7F9DB9;
+    border-bottom: 1px solid #7F9DB9;
+    background-color: #D8E2EB;
 }
 
-tbody {
-    border: 1px solid #7F9DB9;
+tbody tr:hover {
+    background-color: #D8E2EB;
+    cursor: pointer;
 }
 
 th {
-    color: #FFFFFF;
+    color: #225496;
+    font-size: 14px;
     padding: 3px;
 }
 
@@ -370,26 +387,15 @@ th {
 }
 
 td {
-    border-right: 1px solid #7F9DB9;
-    padding: 5px;
-}
-
-.tbl_toolbar {
-    padding: 5px 10px 0;
-    font-weight: bold;
-    color: #FFFFFF;
-    background-color: #7F9DB9;
-}
-
-tbody tr:hover {
-    background-color: #CAE1FF;
-    cursor: pointer;
+    padding: 5px 10px;
 }
 
 td.counter {
-    background-color: #7F9DB9;
-    color: #FFFFFF;
+    width: 25px;
+    border-right: 1px solid #7F9DB9;
+    color: #225496;
     font-weight: bold;
+    text-align: right;
 }
 
 /* HELPERS */
@@ -407,11 +413,12 @@ td.counter {
 }
 
 .empty {
-    display: inline;
     padding: 0;
     margin: 0;
     width: 0;
     height: 0;
+    min-width: 0;
+    min-height: 0;
 }
 
 .inline {
