--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 h2 {
-	display: inline;
+	display: inline-block;
 	color: #225496;
 	font-weight: normal;
 	font-size: 14pt;
@@ -34,6 +34,7 @@ h2 {
 }
 
 h3 {
+    display: inline-block;
 	color: #225496;
 	font-weight: normal;
 	font-size: 12pt;
@@ -63,6 +64,15 @@ dd {
     padding: 5px 0;
 	list-style-position: outside;
 	font-size: 8pt;	
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+td {
+    padding: 0 5px;
 }
 
 /* HEADER */
@@ -185,6 +195,56 @@ dd {
     font-style: italic;
     margin-left: 10px;
     font-size: 8pt;
+    color: #225496;
+}
+
+/* PARTICIPANTS PAGE */
+#filter-participant {
+    border-bottom: 1px solid #225496;
+    margin-bottom: 20px;
+}
+
+#filter {
+    float: left;
+    margin-left: 30px;
+    width: 60%;
+}
+
+#filter select, #filter input {
+    width: 300px;
+}
+
+#filter .buttons {
+    box-shadow: 0 0;
+    text-align: right;
+}
+
+#status {
+    float: left;
+    margin-bottom: 20px;
+}
+
+#participants .alfabet {
+    text-align: center;
+    font-weight: bold;
+}
+
+#list {
+    margin-left: 50px;
+    width: 100%;
+}
+
+#list ol {
+    margin: 20px 0;
+}
+
+#list li {
+    margin: 0;
+}
+
+#list li.char {
+    font-weight: bold;
+    margin-left: 20px;
 }
 
 /* VIEWS */
@@ -310,6 +370,11 @@ fieldset .columns.copy .column {
     padding: 10px;
 }
 
+fieldset .columns.copy .ui-icon {
+    display: block;
+    margin: 0 auto;
+}
+
 /* MESSAGES AND ERRORS */
 
 .message, .errors li {    
@@ -358,23 +423,18 @@ fieldset .columns.copy .column {
     margin: 0 15px;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-thead {
+.tbl_container thead {
     border-top: 1px solid #7F9DB9;
     border-bottom: 1px solid #7F9DB9;
     background-color: #D8E2EB;
 }
 
-tbody tr:hover {
+.tbl_container tbody tr:hover {
     background-color: #D8E2EB;
     cursor: pointer;
 }
 
-th {
+.tbl_container th {
     color: #225496;
     font-size: 14px;
     padding: 3px;
@@ -386,11 +446,11 @@ th {
     text-align: center;
 }
 
-td {
+.tbl_container td {
     padding: 5px 10px;
 }
 
-td.counter {
+.tbl_container td.counter {
     width: 25px;
     border-right: 1px solid #7F9DB9;
     color: #225496;
