--- a/web-app/css/default1.css
+++ b/web-app/css/default1.css
@@ -250,11 +250,11 @@ pre {
 .red-text {
 	color: #c42737;
 	font-weight: bold;}
-	
+	/*
 #author {
  	font-size: 90%;
 	line-height: 130%;
- 	margin: 20px 0px 20px 0px;}
+ 	margin: 20px 0px 20px 0px;}     */
    /*
 table {
 	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
