--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -270,6 +270,10 @@ input, textarea, select {
     border: 1px solid #7F9DB9;
 }
 
+input[type=button] {
+    height: 22px;
+}
+
 input, textarea, .property-value, fieldset ul {
     color: #000000;
     text-align: left;
@@ -282,7 +286,7 @@ li input[type="text"], li input[type="password"], li input[type="number"], li in
     vertical-align: middle;
 }
 
-input[type=text], input[type=password], input[type=number], li input[type="email"], li input[type="url"], select {
+input[type=text], input[type=password], input[type=number], input[type="email"], input[type="url"], select {
     height: 18px;
     width: 180px;
     padding-left: 2px;
@@ -464,6 +468,16 @@ fieldset .columns.copy .ui-icon {
     color: #225496;
     font-weight: bold;
     text-align: right;
+}
+
+#tabs {
+    border: none;
+}
+
+#tabs ul {
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
 
 /* HELPERS */
