--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -263,6 +263,11 @@ fieldset div, fieldset li, ol li {
     margin-top: 5px;
 }
 
+div.info li {
+    min-height: 0;
+    margin-top: 5px;
+}
+
 input, textarea, select {
     font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
     font-size: 9pt;
@@ -523,6 +528,7 @@ fieldset .columns.copy .ui-icon {
     padding: 10px;
     white-space: nowrap;
     border: 1px solid #225496;
+    height: 22px;
 }
 
 .session-block {
@@ -544,17 +550,9 @@ fieldset .columns.copy .ui-icon {
     vertical-align: text-top;
 }
 
-td.equipment-combos {
-
-}
-
 #schedule {
     text-align: center;
     margin-bottom: 20px;
-}
-
-#schedule tr {
-
 }
 
 #schedule td {
@@ -576,10 +574,6 @@ td.equipment-combos {
 
 #legenda-rooms {
     margin-bottom: 20px;
-}
-
-#legenda-rooms td {
-
 }
 
 #loading {
