--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -51,6 +51,7 @@ input[type=text], input[type=password], input[type=number], input[type=email], i
 select {
     height: 22px;
    /* width: 204px;       */
+    min-width: 150px;
 }
 
 select[size] {
@@ -609,12 +610,20 @@ span.ui-icon {
     margin-left: 30px;
 }
 
+ul input.session-code {
+    width: 50px;
+}
+
+ul input.session-name {
+    width: 400px;
+}
+
 /* PLAN SESSIONS */
 
 #sessions-unscheduled {
     margin-bottom: 20px;
     overflow: auto;
-    padding: 10px;
+    padding: 5px;
     white-space: nowrap;
     border: 1px solid #225496;
 }
@@ -624,7 +633,21 @@ span.ui-icon {
     display: inline-block;
     font-weight: bold;
     padding: 3px;
-    background-color: rgba(255, 255, 255, 0.4);
+    margin: 3px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.4);    
+}
+
+.session-block.selected {
+    background: url("../images/striped-bg.png") repeat transparent; 
+    border-width: 3px;
+    color: #FFFFFF;
+    text-decoration: underline;
+    text-shadow: 0 0 3px #000000;
+    box-shadow:         0 0 5px 3px #FFFFFF;
+    -o-box-shadow:      0 0 5px 3px #FFFFFF;
+    -moz-box-shadow:    0 0 5px 3px #FFFFFF;
+    -webkit-box-shadow: 0 0 5px 3px #FFFFFF;
 }
 
 #legenda-schedule {
